# cis-19xx

./: .gitignore  README.md
labs/: ConnectFour.cpp  ConnectionPool.cpp  Containers.cpp  LRU.cpp  MemPool.cpp  MineSweeper.cpp  ResourcePool.cpp  SSO-1.cpp  SSO.cpp  SharedPtr.cpp  Signal.cpp  SingletonFactoryObserver.cpp  SnakeGame.cpp  Tetris.cpp  UniquePtr.cpp  Vec.cpp  VecWithMemOps.cpp  gapbuffer.cpp  miscell.cpp  move and forward.cpp  semaphore.cpp  simple_string.cpp  stdvector.cpp
labs/a-cappella/: CMakeLists.txt  README.md
labs/a-cappella/include/: buffer.hpp  effect.hpp  mixer.hpp  threadpool.hpp  track.hpp
labs/a-cappella/src/: main.cpp  mixer.cpp  track.cpp
labs/new-years-heap/: CMakeLists.txt  README.md  main.cpp
labs/new-years-heap/include/: allocator.hpp  cache.hpp  slab.hpp
labs/new-years-heap/src/: allocator.cpp  cache.cpp  slab.cpp
labs/orderbook/: README.md  book.cpp
labs/tiny-tensor/: CMakeLists.txt  README.md  main.cpp
labs/tiny-tensor/include/: activations.hpp  dense.hpp  loss.hpp  nn.hpp  ops.hpp  tensor.hpp  train.hpp
labs/vector/: README.md  chrono_bench  chrono_bench.cpp  google_bench  google_bench.cpp  vec  vec.hpp
labs/wordle/: README.md  main.cpp  wordle.cpp  wordle.hpp
labs/wordle/sol/: main.cpp  wordle  wordle_sol.cpp  wordle_sol.hpp
